; ModuleID = '/home/carl/AnghaBench/linux/fs/f2fs/extr_node.c_clear_node_page_dirty.c'
source_filename = "/home/carl/AnghaBench/linux/fs/f2fs/extr_node.c_clear_node_page_dirty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }

@F2FS_DIRTY_NODES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.page*)* @clear_node_page_dirty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clear_node_page_dirty(%struct.page* %0) #0 {
  %2 = alloca %struct.page*, align 8
  store %struct.page* %0, %struct.page** %2, align 8
  %3 = load %struct.page*, %struct.page** %2, align 8
  %4 = call i64 @PageDirty(%struct.page* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %15

6:                                                ; preds = %1
  %7 = load %struct.page*, %struct.page** %2, align 8
  %8 = call i32 @f2fs_clear_page_cache_dirty_tag(%struct.page* %7)
  %9 = load %struct.page*, %struct.page** %2, align 8
  %10 = call i32 @clear_page_dirty_for_io(%struct.page* %9)
  %11 = load %struct.page*, %struct.page** %2, align 8
  %12 = call i32 @F2FS_P_SB(%struct.page* %11)
  %13 = load i32, i32* @F2FS_DIRTY_NODES, align 4
  %14 = call i32 @dec_page_count(i32 %12, i32 %13)
  br label %15

15:                                               ; preds = %6, %1
  %16 = load %struct.page*, %struct.page** %2, align 8
  %17 = call i32 @ClearPageUptodate(%struct.page* %16)
  ret void
}

declare dso_local i64 @PageDirty(%struct.page*) #1

declare dso_local i32 @f2fs_clear_page_cache_dirty_tag(%struct.page*) #1

declare dso_local i32 @clear_page_dirty_for_io(%struct.page*) #1

declare dso_local i32 @dec_page_count(i32, i32) #1

declare dso_local i32 @F2FS_P_SB(%struct.page*) #1

declare dso_local i32 @ClearPageUptodate(%struct.page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
